<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/howto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowtoPlayActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/how"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/how"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:textSize="23sp"
        android:textColor="#cc3399"
        android:gravity="center_horizontal"
        android:text="@string/how2"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textSize="20sp"
        android:text="@string/back_to_title"/>

</LinearLayout>